--- a/style.css
+++ b/style.css
@@ -1992,16 +1992,16 @@ button.destovka-accessory-select.destovka-selected {
 
 @media (max-width:992px ){
     #destovka-step7 .destovka-product-card {
-        height: 420px;
+        min-height: 420px;
     }
 
     #destovka-step4 .destovka-product-card,
     #destovka-step8 .destovka-product-card {
-        height: 380px;
+        min-height: 380px;
     }
 
     #destovka-step5 .destovka-product-card {
-        height: 365px;
+        min-height: 365px;
     }
     
 }
